--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 JWT_SECRET = "mysecretkey1234"
+MONGO_URI = "mongodb+srv://sunnysony4379:vwftUEfs59PNVDJI@cluster0.lrrrodc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster"
